--- a/TicTacToe.ConsoleApp/TicTacToe.ConsoleApp.csproj
+++ b/TicTacToe.ConsoleApp/TicTacToe.ConsoleApp.csproj
@@ -5,4 +5,10 @@
     <TargetFramework>netcoreapp2.2</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Reference Include="System">
+      <HintPath>System</HintPath>
+    </Reference>
+  </ItemGroup>
+
 </Project>
